Fix styles on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,35 @@ img {
   width: 100%;
   height: 250px;
 }
+
+@media screen and (max-width: 1100px){
+  .list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 800px){
+  .list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 560px){
+  .list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  
+  .search-area form {
+    width: 300px;
+  }
+  
+  .search-area button {
+    display: inline-block;
+    margin: 0 0px 0 0;
+  }
+  
+  input {
+    margin-left: -100px;
+  }
+  
+}
